--- a/app/public/css/shoppingproinfo.css
+++ b/app/public/css/shoppingproinfo.css
@@ -1,10 +1,7 @@
 .ProinfoPage {
     background: #EEE;
     overflow:hidden;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    display: -webkit-flex;
     flex-direction: column;
 }
 .ProinfoPage .PageContent{
@@ -17,10 +14,7 @@
 .ProinfoPage .ProinfoPageHead {
     flex-shrink: 0;
     background: #5596d6;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    display: -webkit-flex;
     align-items: center;
     height: 68px;
     width: 100%;
@@ -34,13 +28,11 @@
     line-height: 48px;
     color: #FFF;
     font-size: 16px;
+    display: block;
 }
 
 .ProinfoPage .ProinfoPageHead .imgcont {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    display: -webkit-flex;
     width: 50px;
     justify-content: center;
     align-items: center;
@@ -53,10 +45,7 @@
     color: #FFF;
     border-radius: 20px;
     line-height: 20px;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    display: -webkit-flex;
     justify-content: center;
     align-items: center;
     font-size: 10px;
@@ -76,10 +65,7 @@
 .ProinfoPage .ProinfoPageHead i.icon {
     font-size: 30px;
     color: #FFF;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    display: -webkit-flex;
     justify-content: center;
     align-items: center;
     padding-left: 10px;
@@ -103,21 +89,13 @@
 }
 
 .ProinfoPage .proinfoHead .p1 {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    display: -webkit-flex;
-    -webkit-flex-grow: 1;
-    flex-grow: 1;
+    flex-grow: 1
 }
 .ProinfoPage .proinfoHead .p1 >div{
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    display: -webkit-flex;
     flex-direction: column;
-    -webkit-flex-grow: 1;
-    flex-grow: 1;
+    flex-grow: 1
 }
 
 .ProinfoPage .proinfoHead .p2 {
@@ -132,31 +110,25 @@
 }
 
 .ProinfoPage .shoppingBanner .swiper-slide {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    display: -webkit-flex;
     align-items: flex-start;
 }
 
 .ProinfoPage .proinfoHead .proname {
     font-size: 16px;
     margin-right: 15px;
-    -webkit-flex-grow: 1;
     flex-grow: 1
 }
 
 .ProinfoPage .proinfoHead .collectionLnk {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    display: -webkit-flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
 }
 .ProinfoPage .proinfoHead .collectionLnk span{
     flex:1;
+    display: block;
 }
 
 .ProinfoPage .proinfoHead .collectionLnk img {
@@ -165,10 +137,7 @@
 
 .ProinfoPage .discountlist .li {
     background: #FFF;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    display: -webkit-flex;
     padding: 10px;
     justify-content: space-between;
     align-items: center;
@@ -176,10 +145,7 @@
 }
 
 .ProinfoPage .discountlist .li .tt {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    display: -webkit-flex;
     align-items: center;
     font-size: 14px;
 }
@@ -204,7 +170,6 @@
 }
 
 .ProinfoPage .proinfoBody {
-    -webkit-flex-grow: 1;
     flex-grow: 1;
 }
 
@@ -230,22 +195,13 @@
     width: 50%;
     line-height: 40px;
     display: flex;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    display: -webkit-flex;
     justify-content: center;
     align-items: center;
 }
-
 .ProinfoPage .proinfoFoot span > i {
     width: 90%;
     line-height: 40px;
     display: flex;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    display: -webkit-flex;
     font-style: normal;
     justify-content: center;
     font-size: 14px;
@@ -253,29 +209,23 @@
     color: #FFF;
     border-radius: 3px;
 }
-
 .ProinfoPage .proinfoFoot span:first-child > i {
     background: #f2a225;
 }
-
 .ProinfoPage .proinfoBodyBody {
     padding-bottom: 50px;
     background: #FFF;
     overflow:hidden;
 }
-
 .ProinfoPage .proinfoBodyBody *{
     max-width: 100%;
 
 }
-
 .ProinfoPage .proinfoBodyBody img {
     width: 100%;
 }
-
 .shoppingNews {
-    height: 42px;
-    -webkit-flex-grow: 1;
+    height:"42px";
     flex-grow: 1;
 }
 .shoppingNews .swiper-container{
@@ -283,11 +233,9 @@
 }
 .shoppingNews .swiper-container .swiper-slide{
     display: flex;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    display: -webkit-flex;
     justify-content: flex-start;
     align-items: center;
-    line-height: 42px;
+}
+.shoppingPage .shoppingNews .swiper-slide{
+    min-height: 42px;
 }
