--- a/app/public/css/shoppingprolist.css
+++ b/app/public/css/shoppingprolist.css
@@ -20,10 +20,6 @@
     display: -webkit-box;
     display: -webkit-flex;
     display: flex;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    display: -webkit-flex;
     -webkit-box-align: center;
     -webkit-align-items: center;
     align-items: center;
@@ -34,16 +30,13 @@
 }
 
 .ProlistPage .searchHead .ui.input {
-    
-    margin: 10px 0;
-    margin-right: 45px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    display: -webkit-flex;
     -webkit-flex-grow: 1;
     flex-grow: 1;
-    width: 100%
+    margin: 10px 0;
+    margin-right: 58px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
 }
 
 .ProlistPage .searchHead .ui.input input {
@@ -54,7 +47,8 @@
     -webkit-flex-grow: 1;
     -webkit-flex-grow: 1;
     flex-grow: 1;
-    width: 100%
+    display: block;
+    width: 100%;
 }
 
 .ProlistPage .searchHead img {
@@ -132,6 +126,10 @@
 .ProlistPage .proList .li .price img {
     width: 22px;
     margin: 5px;
+}
+
+.ProlistPage .proList .li .price span{
+    display: block;
 }
 
 .ProlistPage .hotLnk {
