--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -277,10 +277,15 @@
 }
 .homePage .swiper-container{
     width: 100%;
+    padding: 0;
     padding-bottom: 10px;
 }
 .homePage .swiper-container .swiper-pagination.swiper-pagination-bullets{
     bottom: 0px;
+}
+.homePage .toolBar + div{
+    width: 100%;
+    overflow: hidden;
 }
 .homePage .swiper-pagination-bullet{
     background: #79bdf0;
