--- a/app/public/css/myorder.css
+++ b/app/public/css/myorder.css
@@ -23,6 +23,7 @@
     flex-grow: 1;
     text-align: center;
     font-size: 14px;
+    display: block;
 }
 .myOrder .actionItem span.sel{
     color: #5694dd;
@@ -119,24 +120,53 @@
 
 .orderList .items > div.cont .proinfo .proother {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    display: -webkit-flex;
     justify-content: space-between;
+    -moz-justify-content: space-between;
+   
+    justify-content: space-between;
+    -webkit-justify-content: space-between;
     align-items: center;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-align-items: center;
 }
+.orderList .items > div.cont .proinfo .proother span{
+    display: block;
+}
+
 
 .orderList .items > div.cont .proinfo .proother .evaluationLnk{
     border: 1px solid #f38108;
     color: #f38108;
     border-radius: 6px;
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    display: -webkit-flex;
     width: 80px;
     height: 32px;
     align-items: center;
     justify-content: center;
-    
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-align-items: center;
+
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    justify-content: center;
 }
 .orderList .items > div.cont .proinfo .proother .price {
     color: #F00;
     font-size: 16px;
+    display: block;
+}
+.orderList .items > div.cont .proinfo .proother span{
+    display: block;
 }
 .orderList .items > div.lnk {
     display: flex;
