--- a/app/public/css/feed.css
+++ b/app/public/css/feed.css
@@ -193,6 +193,9 @@
     font-size: 18px;
     margin-bottom: 5px;
     display: block;
+    font-size: 1em;
+    color: rgba(0,0,0,.87);
+    font-weight: 700;
 }
 
 .topTip {
