--- a/app/public/css/bigimg.css
+++ b/app/public/css/bigimg.css
@@ -17,6 +17,10 @@
     -webkit-align-items: stretch;
     align-items: stretch;
 }
+.showBigImg > div{
+    width: 100%;
+    height: 100%;
+}
 .showBigImg img{
     max-width: 100%;
 }
@@ -42,6 +46,7 @@
 }
 .showBigImg .swiper-container{
     width: 100%;
+    height: 100%;
 }
 .showBigImg .swiper-container .swiper-wrapper{
     position: absolute;
