字体变大（ios上笔画太细,参考淘宝、大众点评等），帖子和评论的发布者字体统一 进度条（只要单色，去掉红色）（80%蓝色，90红色，过期的灰色） 回帖没有回车、评论输入（回帖开新页面、发布帖子新页面）

--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -5,7 +5,7 @@
     -moz-user-select:none;
     -ms-user-select:none;
     user-select:none;
-    font-weight: 300;
+    font-weight: 400;
 }
 input, textarea{
     -webkit-user-select:text;
@@ -101,3 +101,37 @@ input, textarea{
 .ui.feed>.event>.content .meta .like:hover .icon{
     color: rgba(0,0,0,.5)
 }
+
+
+.feedBottomReplyForm #newNavHeadContent.newNavHeadContent{
+    width: 100%;
+    top: 0;
+    position: absolute;
+    z-index: 10001
+}
+
+
+.feedBottomReplyForm i.back{
+    position: absolute;
+    left: 0;
+    top: 20px;
+    z-index: 10002;
+    color: #FFF;
+    font-size: 20px;
+    font-size: 30px;
+    color: #FFF;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding-left: 15px;
+    height: 48px;
+    width: 50px;
+}
+
+
