--- a/app/public/css/feed.css
+++ b/app/public/css/feed.css
@@ -344,9 +344,9 @@
     display: -webkit-box;
     display: -webkit-flex;
     display: flex;
-    -moz-justify-content: space-between;
-    -webkit-justify-content: space-between;
-    justify-content: space-between;
+    -moz-justify-content:  flex-start;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
     position: fixed;
     bottom: 0;
     left: 0;
@@ -354,14 +354,27 @@
     align-items: center;
     background: #FFF;
     border-top: 1px solid #EEE;
-    padding: 8px 0;
+    padding-top: 80px;
     z-index: 1001;
+    height: 100%;
+    -webkit-box-orient:vertical;
+    -webkit-box-direction:normal;
+        -moz-box-orient:vertical;
+        -moz-box-direction:normal;
+        flex-direction:column;
+        -webkit-flex-direction:column;
 }
-.feedBottomReply .ui.input{
-    flex-grow: 1;
+.feedBottomReply textarea{
+    height: 200px;
     padding: 5px 15px;
+    -webkit-align-self: stretch;
+    align-self: stretch;
+    resize: none;
+    font-size: 18px;
 }
-
+.feedBottomReply .ui.primary.button{
+    width: 80%;
+}
 .feedBottomReply span{
     padding-right: 15px;
 }
