产品里面有分享功能（写组件，测试） 我的邀请码分享（写组件，测试） 添加设备第二步没有的话，显示：没有找到设备

--- a/app/public/css/newdevice.css
+++ b/app/public/css/newdevice.css
@@ -26,7 +26,7 @@
     flex-direction: column;
     padding-top: 0;
 }
-.addnewdevice .fm .device2_text>div{
+.addnewdevice .fm .device2_text>div.ls{
     display: flex;
     flex-grow: 1;
     align-self: stretch;
