--- a/app/public/css/user.css
+++ b/app/public/css/user.css
@@ -216,7 +216,7 @@
 }
 .pageWamp >div.UserLoginPage{
     overflow: scroll;
-    flex-shrink: 0;
+    /*flex-shrink: 0;*/
     display: flex;
     flex-direction: column;
     top: 0;
