--- a/app/public/css/shoppingproinfo.css
+++ b/app/public/css/shoppingproinfo.css
@@ -13,7 +13,9 @@
 }
 .ProinfoPage .ProinfoPageHead {
     flex-shrink: 0;
-    background: #5596d6;
+    
+    background-image: linear-gradient(0deg, #00cac8, #0090d8);
+
     display: flex;
     align-items: center;
     height: 68px;
