--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -5,7 +5,7 @@
     -moz-user-select:none;
     -ms-user-select:none;
     user-select:none;
-    font-weight: 400;
+    font-weight: 300;
 }
 input, textarea{
     -webkit-user-select:text;
@@ -77,10 +77,15 @@ input, textarea{
     background: #EEE;
 }
 .homeBottom .ui.button img{
-    width: 26px;
+    width: 30px;
+    margin-bottom: 3px;
+}
+.homeBottom .ui.button.action span{
+    color: #3ab4c3;
 }
 .homeBottom .ui.button span{
     display: block;
+    font-size: 12px;
 }
 .logisticsinfoPage{
     justify-content: flex-start;
@@ -88,16 +93,12 @@ input, textarea{
 .ui.feed>.event>.content .meta .like:hover .icon{
     color: rgba(0,0,0,.5)
 }
-
-
 .feedBottomReplyForm #newNavHeadContent.newNavHeadContent{
     width: 100%;
     top: 0;
     position: absolute;
     z-index: 10001
 }
-
-
 .feedBottomReplyForm i.back{
     position: absolute;
     left: 0;
