--- a/app/public/css/myprofile.css
+++ b/app/public/css/myprofile.css
@@ -5,7 +5,9 @@
     background: #F5F5F5;
 }
 .myProfilePage .headCont{
-    background: linear-gradient(180deg, #5596d6, #337dc4);
+    
+    background-image: linear-gradient(0deg, #00cac8, #0090d8);
+
     display: flex;
     flex-direction: column;
     padding: 30px 0;
@@ -62,8 +64,8 @@
 }
 .myProfilePage .userMessageLnk{
     position: absolute;
-    right: 15px;
-    top: 40px;
+    right: 10px;
+    top: 30px;
 }
 .myProfilePage .userMessageLnk img{
     width: 26px;
