--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -115,11 +115,12 @@
 }
 .headContent{
     text-align: center;
-    padding: 10px;
+    padding: 0 10px;
     position: relative;
+    margin-bottom: -10px;
 }
 .headContent img.bg{
-    width: 220px;
+    width: 250px;
     animation:xuanzhuan 10s infinite;
     -webkit-animation:xuanzhuan 10s infinite;
     animation-timing-function:linear;
@@ -144,8 +145,7 @@
     display: -webkit-flex;
     display: flex;
     flex-direction: column;
-    padding-top: 65px;
-
+    padding-top: 52px;
 }
 
 .headContentInfo .nodata{
@@ -158,11 +158,11 @@
     color: #FFF;
 }
 .headContentInfo .i2 {
-    font-size: 56px;
+    font-size: 70px;
     line-height: 60px;
     color: #FFF;
-    font-weight: bold;
-    margin-bottom: 5px;
+    /* font-weight: bold; */
+    margin-bottom: 10px;
     display: block;
 }
 .headContentInfo .i3 {
@@ -177,19 +177,32 @@
     -webkit-align-items: center;
     align-items: center;
 
-    margin-bottom: 20px;
+    margin-bottom: 6px;
+    color: #FFF;
+    -moz-box-direction:normal;
+    flex-direction:column;
+    -webkit-flex-direction:column;
 }
-.headContentInfo .i3 span{
-    color: #7ffef8;
-    border: 1px solid rgba(255,255,255,.4);
-    border-radius: 50px;
-    padding: 0 10px;
+.headContentInfo .i3:before{
+    content: "";
+    display: block;
+    width: 0;
+    height: 0;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-bottom: 16px solid #FFF;
+
 }
 .headContentInfo .i4 {
     color: #FFF;
+    display: block;
+    width: 120px;
+    margin: 0 auto;
+    border-top: 1px solid #FFF;
+    line-height: 26px;
 }
 .headInfo{
-    border: 1px solid #7abbf5;
+    border: 3px solid rgba(255,255,255,.4);
     padding: 5px 15px;
     border-radius: 100px;
     font-size: 14px;
@@ -206,7 +219,7 @@
     font-size: 12px;
 }
 .headInfo .headInfoborder {
-    border-right: 1px solid #7abbf5;
+    border-right: 3px solid rgba(255,255,255,.4);
     margin: 0 10px;
 }
 .HomeList{
@@ -295,12 +308,12 @@
     overflow: hidden;
 }
 .homePage .swiper-pagination-bullet{
-    background: #79bdf0;
+    background: rgba(255,255,255,.5);
     opacity: 1;
 }
 .homePage .swiper-pagination-bullet-active{
     background: #7ffef8;
-    width: 12px;
+    width: 16px;
     border-radius: 4px;
 }
 .homePage .swiper-container.swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet{
@@ -326,7 +339,7 @@
     height: 190px;
     width: 100%;
     position: absolute;
-    top: 24px;
+    top: 31px;
     overflow: hidden;
     border-radius: 250px;
     padding-right: 18px;
