--- a/app/public/css/newnav.css
+++ b/app/public/css/newnav.css
@@ -1,5 +1,5 @@
 #newNavHeadContent.newNavHeadContent {
-    background: #0090d8;
+    background-image: linear-gradient(0deg, #00cac8, #0090d8);
     display: flex;
     align-items: center;
     height: 68px;
