--- a/app/public/css/pay.css
+++ b/app/public/css/pay.css
@@ -8,7 +8,7 @@
     overflow: hidden;
 }
 .PayPage .PageHead {
-    background: #5596d6;
+    background-image: linear-gradient(0deg, #00cac8, #0090d8);
     display: flex;
     align-items: center;
     height: 68px;
@@ -21,6 +21,7 @@
 .PayPage .PayPageBody{
     flex-grow: 1;
     overflow-y: scroll;
+    background: #EEE;
 }
 
 .PayPage .PageHead .title {
