--- a/app/public/css/myprofile.css
+++ b/app/public/css/myprofile.css
@@ -15,6 +15,7 @@
     flex-shrink: 0;
     margin-top: -1px;
     padding-top: 50px;
+    padding-bottom: 70px;
 }
 .myProfilePage .headCont .signDom{
     position: absolute;
@@ -40,17 +41,19 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    position: relative;
+    z-index: 2
 }
 .myProfilePage .userInfo img.avatar{
     border-radius: 50%;
-    width: 80px;
-    height: 80px;
+    width: 110px;
+    height: 110px;
     border:3px solid #FFF;
     margin-bottom: 5px; 
 }
 .myProfilePage .userInfo .username{
     color: #FFF;
-    font-size: 14px;
+    font-size: 20px;
     display: block;
 }
 .myProfilePage .userInfo .usertype {
@@ -58,9 +61,17 @@
 }
 .myProfilePage .userCode{
     position: absolute;
-    bottom: 10px;
-    left: 15px;
+    top: 162px;
+    left: 0px;
     color: #FFF;
+    background: #FFF;
+    color: #0bdbd9;
+    line-height: 34px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 0 40px 40px 0;
+    font-size: 18px;
+    z-index: 3
 }
 .myProfilePage .userMessageLnk{
     position: absolute;
@@ -105,6 +116,48 @@
     font-size:14px;
     color: #999;
 }
+
+.myorderstitle{
+    display: flex;
+    padding: 10px 15px;
+    justify-content: space-between;
+    padding-right: 30px;
+    position: relative;
+    padding-top: 100px;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    left:0;
+    background: url("/img/shuikj_35.png") no-repeat center bottom;
+    background-size: 100% auto;
+    z-index: 1;
+}
+.myorderstitle:after{
+    content: " ";
+    display: inline-block;
+    height: 12px;
+    width: 12px;
+    border-width: 2px 2px 0 0;
+    border-color: #FFF;
+    border-style: solid;
+    -webkit-transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 0);
+    transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 0);
+    position: relative;    
+    position: absolute;
+    bottom: 27px;
+    right: 20px;
+}
+.myorderstitle span{
+    font-size: 18px;
+    display: block;
+    color: #FFF;
+    line-height: 46px;
+}
+.myorderstitle span:last-child{
+    font-size: 14px;
+}
+
+
 .myProfileBannerCont .l2 {
     display: flex;
     justify-content: space-between;
@@ -112,7 +165,8 @@
     margin-bottom: 20px;
 }
 .myProfileBannerCont .l2 > div img{
-    width: 40px;
+    width: 36px;
+    margin: 5px;
 }
 .myProfileBannerCont .l2 > div span{
     display: block;
@@ -141,7 +195,7 @@
     position: absolute;
     top: 10px;
     margin-left: 50%;
-    left: 10px;
+    left: 6px;
 }
 
 
@@ -155,7 +209,7 @@
 
 .myProfileBannerCont .ll div{
     border-bottom: 1px solid #EEE;
-    padding: 5px 15px;
+    padding: 8px 15px;
     display: flex;
     justify-content: flex-start;
     -webkit-box-align: center;
