--- a/app/public/css/user.css
+++ b/app/public/css/user.css
@@ -346,6 +346,17 @@
     margin-top: 20px;
 }
 
+.UserLoginPage .forgetpwdcon {
+    display: flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+.UserLoginPage .forgetpwdcon >div,
 .UserLoginPage .forgetpwd {
     display: flex;
     display: -webkit-box;
