--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -275,8 +275,8 @@
     -webkit-flex-grow: 1;
     flex-grow: 1;
     border-bottom: 1px solid #DDD;
-    
     padding: 10px 15px;
+    flex-wrap: wrap;
 }
 .ListTitle > div{
     display: -webkit-box;
@@ -285,12 +285,10 @@
     -moz-justify-content: center;
     -webkit-justify-content: center;
     justify-content: center;
-
     -webkit-box-align: center;
     -webkit-align-items: center;
     align-items: center;
-
-    font-size: 16px;
+    font-size: 14px;
 }
 .ListTitle > div:last-child .ui.fitted.toggle.checkbox{
     margin-right: 10px;
@@ -354,3 +352,88 @@
 }
 
 
+.devicedatalistli {
+    border:1px solid #EEE;
+    border-radius: 6px;
+    padding: 10px 10px 0 10px;
+    background: #F8F8F8;
+    position: relative;
+    margin-bottom: 15px;
+}
+.devicedatalistli .datadata{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    display: -webkit-flex;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
+    flex-grow: 1;
+    line-height: 20px;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-align-items: center;
+}
+.devicedatalistli .datadata span{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    display: -webkit-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-align-items: center;
+    flex-shrink: 0;
+}
+.devicedatalistli .listname{
+    position: absolute;
+    left: 15px;
+    top:-8px;
+    font-weight: 600;
+}
+.devicedatalistli .datadata .backdatabtn{
+    padding: 0 10px;
+    border:1px solid #00cccc;
+    border-radius: 6px;
+    line-height: 22px;
+    height: 22px;
+    color: #00cccc;
+    margin-left: 10px;
+}
+.devicedatalistli .datadata .setdatabtn{
+    padding: 0 10px;
+    border:1px solid #38b6e3;
+    border-radius: 6px;
+    line-height: 22px;
+    height: 22px;
+    color: #38b6e3;
+    margin-left: 10px;
+}
+.devicedatalistli .listprocess{
+    flex-grow: 1;
+    margin: 10px;
+}
+.HomeList .ListTitle .showbackbtn,
+.HomeList .ListTitle .setbackliuliang{
+    border:1px solid #38b6e3;
+    border-radius: 6px;
+    padding: 0 3px;
+    line-height: 20px;
+    color: #38b6e3;
+}
+.HomeList .ListTitle .showbackbtn.sel{
+    color: #CC0000;
+    border:1px solid #CC0000;
+}
+.HomeList .ListTitle .tit{
+    flex-grow: 1;
+    text-align: left;
+    --moz-justify-content: flex-start;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+}
+.HomeList .ListTitle  .ListTitleRadio{
+    margin: 0 10px;
+}
+.HomeList .ListTitle  .ListTitleRadio .ui.fitted.toggle.checkbox{
+    margin-right: 5px;
+}
