--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -113,6 +113,14 @@
     overflow: scroll;
     
 }
+.homePageWamp img.shuoming{
+    -webkit-align-self: center;
+    align-self: center;
+    width: 100%;
+    margin-left: 14px;
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
 .headContent{
     text-align: center;
     padding: 0 10px;
@@ -262,6 +270,67 @@
     flex-shrink: 0;
 }
 
+.setoneform > div{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.setoneform > div span{
+    margin-right: 10px;
+    font-size: 12px;
+    display: inline-block;
+    width: 100px;
+    flex-shrink: 0;
+    text-align: right;
+}
+.numbrinput{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+}
+.setoneform > div > .numbrinput span{
+    display: inline-block;
+    width: 40px;
+    height: 30px;
+    line-height: 26px;
+    font-size: 30px;
+    text-align: center;
+    margin: 0;
+    background: #F5F5F5;
+}
+.setoneform > div > .numbrinput span:active{
+    background: #EEE;
+}
+.numbrinput{
+    position: relative;
+    margin-bottom: 5px;
+}
+.numbrinput i{
+    font-style: normal;
+    line-height: 30px;
+    position: absolute;
+    right: 45px;
+}
+.numbrinput input{
+    width: 50px;
+    height: 30px;
+    border-top: 1px solid #EEE;
+    border-bottom: 1px solid #EEE;
+    border-left:0;
+    border-right: 0;
+    text-align: center
+}
+.datanumber{
+    display: inline-block;
+    width: 30px;
+}
 .ListTitle{
     display: -webkit-box;
     display: -webkit-flex;
