--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -121,6 +121,40 @@
     margin-top: 10px;
     margin-bottom: 0px;
 }
+.homePage .headContent.outlinestyle{
+    text-align: center;
+    position: relative;
+    margin-bottom: -10px;
+    width: 200px;
+    height: 200px;
+    background: rgba(0,0,0,.4);
+    margin: 20px auto;
+    border-radius: 100px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    display: -webkit-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-align-items: center;
+
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+
+    -moz-box-direction:normal;
+    flex-direction:column;
+    -webkit-flex-direction:column;
+    padding: 30px;
+}
+
+.homePage .headContent.outlinestyle >div{
+    color: #FFF;
+}
+.homePage .headContent.outlinestyle >div:first-child{
+    font-size: 30px;
+    font-weight: 600;
+}
 .headContent{
     text-align: center;
     padding: 0 10px;
