修改首页设置数据显示不正确， 修改首页样式X方向有滚动

--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -111,7 +111,7 @@
     flex-direction: column;
     flex-grow: 1;
     overflow: scroll;
-    
+    overflow-x: hidden;
 }
 .homePageWamp img.shuoming{
     -webkit-align-self: center;
