--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -6,6 +6,9 @@
     -ms-user-select:none;
     user-select:none;
     font-weight: 300;
+    -webkit-transform: rotateY(30deg)rotateX(-30deg);
+    -webkit-transform: translateZ(0);
+    -webkit-backface-visibility:hidden;
 }
 input, textarea{
     -webkit-user-select:text;
