--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -10,6 +10,21 @@
     -webkit-transform: translateZ(0);
     -webkit-backface-visibility:hidden;
 }
+.weuiPage{
+    width: 100%;
+    position: fixed;
+    z-index: 10000;
+    top: -1px;
+    height: 1px;
+}
+.weuiPage >div{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 10000;
+    top: 0;
+    bottom: 0;
+}
 input, textarea{
     -webkit-user-select:text;
     -moz-user-select:text;
