--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -324,6 +324,14 @@
     flex-shrink: 0;
     text-align: right;
 }
+.volsetoneform > div span{
+    margin-right: 10px;
+    font-size: 12px;
+    display: inline-block;
+    width: 80px;
+    flex-shrink: 0;
+    text-align: right;
+}
 .numbrinput{
     display: -webkit-box;
     display: -webkit-flex;
@@ -342,6 +350,25 @@
 .setoneform > div > .numbrinput span:active{
     background: #EEE;
 }
+.volsetoneform > div > .numbrinput span{
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    line-height: 26px;
+    font-size: 30px;
+    text-align: center;
+    margin: 0;
+    background: #F5F5F5;
+}
+.volsetoneform > div > .numbrinput span:active{
+    background: #EEE;
+}
+.volsetoneform > div > .numbrinput b{
+    display: inline-block;
+    width: 100px;
+    line-height: 30px;
+    margin-left: -10px;
+}
 .numbrinput{
     position: relative;
     margin-bottom: 5px;
@@ -351,6 +378,9 @@
     line-height: 30px;
     position: absolute;
     right: 45px;
+}
+.volsetoneform .numbrinput i{
+    right: 132px;
 }
 .numbrinput input{
     width: 50px;
